{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 307,
  "lineage": "f7baa597-5725-d610-9577-7cf3bec8169f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:security-group/sg-07d9d4530d18f7c94",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d9d4530d18f7c94",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "project-mgmt-synth16394728-alb-20251003140049583400000002",
            "name_prefix": "project-mgmt-synth16394728-alb-",
            "owner_id": "342597974367",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "project-mgmt-synth16394728-alb-sg",
              "Project": "project-mgmt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "project-mgmt-synth16394728-alb-sg",
              "Project": "project-mgmt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e6c6fc1a3310da9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:security-group/sg-0ad0a6f2049a28499",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad0a6f2049a28499",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07d9d4530d18f7c94"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "project-mgmt-synth16394728-ec2-20251003140056689100000004",
            "name_prefix": "project-mgmt-synth16394728-ec2-",
            "owner_id": "342597974367",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "project-mgmt-synth16394728-ec2-sg",
              "Project": "project-mgmt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "project-mgmt-synth16394728-ec2-sg",
              "Project": "project-mgmt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e6c6fc1a3310da9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:security-group/sg-0a0403d5296091f3d",
            "description": "Security group for Lambda functions",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0403d5296091f3d",
            "ingress": [],
            "name": "project-mgmt-synth16394728-lambda-20251003140049582100000001",
            "name_prefix": "project-mgmt-synth16394728-lambda-",
            "owner_id": "342597974367",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "project-mgmt-synth16394728-lambda-sg",
              "Project": "project-mgmt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "project-mgmt-synth16394728-lambda-sg",
              "Project": "project-mgmt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e6c6fc1a3310da9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:security-group/sg-09b3937a66e51e55e",
            "description": "Security group for RDS Aurora",
            "egress": [],
            "id": "sg-09b3937a66e51e55e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow PostgreSQL from EC2 and Lambda",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a0403d5296091f3d",
                  "sg-0ad0a6f2049a28499"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "project-mgmt-synth16394728-rds-20251003140101640300000006",
            "name_prefix": "project-mgmt-synth16394728-rds-",
            "owner_id": "342597974367",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "project-mgmt-synth16394728-rds-sg",
              "Project": "project-mgmt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "project-mgmt-synth16394728-rds-sg",
              "Project": "project-mgmt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e6c6fc1a3310da9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_security_group.lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-0b49b034533a97bfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.26.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b49b034533a97bfa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "project-mgmt-synth16394728-database-1",
              "Project": "project-mgmt",
              "Type": "Database"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "project-mgmt-synth16394728-database-1",
              "Project": "project-mgmt",
              "Type": "Database"
            },
            "vpc_id": "vpc-07e6c6fc1a3310da9"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-038523976432081b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.26.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038523976432081b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "project-mgmt-synth16394728-database-2",
              "Project": "project-mgmt",
              "Type": "Database"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "project-mgmt-synth16394728-database-2",
              "Project": "project-mgmt",
              "Type": "Database"
            },
            "vpc_id": "vpc-07e6c6fc1a3310da9"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-0cab10249d1108cdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.26.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cab10249d1108cdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "project-mgmt-synth16394728-private-1",
              "Project": "project-mgmt",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "project-mgmt-synth16394728-private-1",
              "Project": "project-mgmt",
              "Type": "Private"
            },
            "vpc_id": "vpc-07e6c6fc1a3310da9"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-0b133302f36681c5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.26.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b133302f36681c5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "project-mgmt-synth16394728-private-2",
              "Project": "project-mgmt",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "project-mgmt-synth16394728-private-2",
              "Project": "project-mgmt",
              "Type": "Private"
            },
            "vpc_id": "vpc-07e6c6fc1a3310da9"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:vpc/vpc-07e6c6fc1a3310da9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.26.0.0/16",
            "default_network_acl_id": "acl-088507bc058e36669",
            "default_route_table_id": "rtb-00ab16db3c86365c2",
            "default_security_group_id": "sg-0fb28fb7c7a39c217",
            "dhcp_options_id": "dopt-096ea572b45cebc14",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07e6c6fc1a3310da9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00ab16db3c86365c2",
            "owner_id": "342597974367",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "project-mgmt-synth16394728-synth16394728-vpc",
              "Project": "project-mgmt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "project-mgmt-synth16394728-synth16394728-vpc",
              "Project": "project-mgmt"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}